Fixed Wrapping issues with small windows.

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body{
     color: white;
     margin: 0;
     padding: 0;
+    overflow :auto;
+    word-wrap: break-word;
 }
 
 .header.content {
@@ -40,6 +42,7 @@ body{
     flex-direction: column;
     align-items: center;
     padding: 32px;
+    overflow: auto;
 }
 
 
@@ -85,6 +88,7 @@ body{
     font-size: 36px; 
     font-family: Georgia; 
     font-style: italic; 
+    display: flex;
 }
 
 ul {
@@ -117,5 +121,9 @@ button {
     padding: 0px;
     color: white;
     font-size: 12px;
+}
+
+#thor-text {
+    align-self: flex-end;
 }
 
